<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/teamItem"
    android:background="@drawable/item_style">

    <ImageView
        android:id="@+id/teamImageView"
        android:layout_width="54sp"
        android:layout_height="54sp"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_margin="8sp"
        android:contentDescription="@string/hero_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="99"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamNameTextView"
            android:textColor="@color/secondary_title"
            android:text="@string/team_name"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamTypeTextView"
            android:textColor="@color/normal_text"
            android:text="@string/team_type"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
