<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.signin.RegisterFragment"
    android:padding="16sp"
    android:id="@+id/registerFragment">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="98dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:text="Already have an account?\nLogin here"
        android:textColor="#6A9EB5"
        app:layout_constraintBottom_toBottomOf="@+id/registerButton"
        app:layout_constraintStart_toEndOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:background="@drawable/hero_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="@dimen/login_edit_text_min"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:background="@drawable/hero_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="@dimen/login_edit_text_min"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:background="@drawable/hero_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/login_edit_text_min"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:background="@drawable/hero_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/user_hint"
        android:inputType="textCapSentences"
        android:minHeight="@dimen/login_edit_text_min"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonGuideline"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/loginTitleGuideline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingHorizontal="@dimen/login_button_padding_horizontal"
        android:paddingVertical="@dimen/login_button_padding_vertical"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/loginButtonGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTitleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginButtonGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pichanga_app"
        android:textColor="@color/title"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@+id/loginTitleGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
